# haskell-gmsh

./: .gitignore  README.md  haskell-gmsh.cabal  package.yaml
apigenerator/: generate.py
apigenerator/api/: GenApi.py
genapi/: GenApi.py  GenHaskell.py
src/: GmshAPI.chs  GmshAPI.hs  GmshAPIManual.hs  Main.hs  TestMain.hs
test/: CubeSphere.hs  CubeSphereTest.hs  CubeTest.hs  Main.hs  MarshallerSpec.hs  ViewTest.hs
test-manual/: CubeTest.hs  Main.hs  ViewTest.hs
