name:                haskell-gmsh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-gmsh#readme
license:             GPL-2
license-file:        LICENSE
author:              Antero Marjamäki
maintainer:          antero.marjamaki@tuni.fi
copyright:           2019 Antero Marjamäki
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-gmsh
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  build-tool-depends:  c2hs:c2hs
  include-dirs:        gmsh/include
  extra-lib-dirs:      gmsh/lib
  extra-libraries:     gmsh
  other-modules:       GmshAPI
