name:                haskell-gmsh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-gmsh#readme
license:             GPL-2
license-file:        LICENSE
author:              Antero Marjamäki
maintainer:          antero.marjamaki@tuni.fi
copyright:           2019 Antero Marjamäki
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  extra-libraries:     gmsh
  exposed-modules:     GmshAPIManual

executable Test
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             TestMain.hs
  build-depends:       base >= 4.7 && < 5
  extra-libraries:     gmsh
  other-modules:       GmshAPIManual
