name:                haskell-gmsh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-gmsh#readme
license:             GPL-2
license-file:        LICENSE
author:              Antero Marjamäki
maintainer:          antero.marjamaki@tuni.fi
copyright:           2019 Antero Marjamäki
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  extra-libraries:     gmsh
  exposed-modules:     GmshAPI

test-suite test-cube-sphere
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             CubeSphere.hs
  build-depends:       base
                     , haskell-gmsh
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
